# plataforma-eventos-backend/routes/routes.js
@@ -6,14 +6,15 @@ const authenticate = require('../middlewares/authentication');
 
 router.post('/user', UserController.createUser);
 router.post('/user/login', UserController.loginUser);
-
-router.put('/user/validation', authenticate, UserController.validateAccount);
-router.get('/user/events', authenticate, UserController.getUserEvents);
-router.put('/user/events/:id', authenticate, EventController.updateEvent);
+router.post('/events/:id/subscribe', EventController.subscribeToEvent);
 router.post('/events', authenticate, EventController.createEvent);
 
+router.put('/user/validation', authenticate, UserController.validateAccount);
+router.put('/user/events/:id', authenticate, EventController.updateEvent);
+
+router.get('/user/events', authenticate, EventController.getUserEvents);
 router.get('/events', EventController.getEvents);
 router.get('/events/:id', EventController.getEventById);
-router.post('/events/:id/subscribe', EventController.subscribeToEvent);
+
 
 module.exports = router;
